--- a/templates/account/base.html
+++ b/templates/account/base.html
@@ -1,14 +1,17 @@
 {% load i18n %}
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{% block head_title %}{% endblock head_title %}</title>
-    {% block extra_head %} {% endblock extra_head %}
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{% block head_title %}{% endblock %}</title>
+    {% block extra_head %}
+    {% endblock %}
   </head>
   <body>
-    {% block body %} {% if messages %}
+    {% block body %}
+
+    {% if messages %}
     <div>
       <strong>{% trans "Messages:" %}</strong>
       <ul>
@@ -23,9 +26,7 @@
       <strong>{% trans "Menu:" %}</strong>
       <ul>
         {% if user.is_authenticated %}
-        <li>
-          <a href="{% url 'account_email' %}">{% trans "Change Email" %}</a>
-        </li>
+        <li><a href="{% url 'account_email' %}">{% trans "Change Email" %}</a></li>
         <li><a href="{% url 'account_logout' %}">{% trans "Sign Out" %}</a></li>
         {% else %}
         <li><a href="{% url 'account_login' %}">{% trans "Sign In" %}</a></li>
@@ -33,7 +34,10 @@
         {% endif %}
       </ul>
     </div>
-    {% block content %} {% endblock content %} {% endblock body %} {% block
-    extra_body %} {% endblock extra_body %}
+    {% block content %}
+    {% endblock %}
+    {% endblock %}
+    {% block extra_body %}
+    {% endblock %}
   </body>
 </html>
